removed logging and paginate filter

--- a/app/views/infrastructures/modal/_modal_change_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_change_rules.html.erb
@@ -23,8 +23,7 @@
           </thead>
           <tbody>
           <tr v-for="r in dispItems
-          | filterBy filterKey
-          | paginate" :class="{info: r.checked}" @click="check(r)">
+          | filterBy filterKey" :class="{info: r.checked}" @click="check(r)">
             <td><input type="checkbox" v-model="r.checked"></td>
             <td>{{r.group_id}}</td>
             <td><div class="truncate"> {{r.group_name}}</div></td>
