--- a/app/views/infrastructures/modal/_modal_change_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_change_rules.html.erb
@@ -37,7 +37,7 @@
           </tr>
           <tr  v-if="filteredLength === 0 && dispItems.length > 0">
             <td v-if="lang === 'en'" colspan="4"><h4> No results for <span class="text text-info">"{{filterKey}}"</span> was found. </h4></td>
-            <td v-if="lang === 'ja'"><h4> <span class="text text-info">"{{filterKey}}"</span> に一致する情報は見つかりませんでした。 </h4></td>
+            <td v-if="lang === 'ja'" colspan="4"><h4> <span class="text text-info">"{{filterKey}}"</span> に一致する情報は見つかりませんでした。 </h4></td>
           </tr>
           </tbody>
         </table>
