added checker if app is offline

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,8 @@
  *= require selectize.paper
  *= require fullcalendar
  *= require font-awesome
+ *= require offline-theme-chrome
+ *= require offline-language-english
  */
 
 .modal-header {
