implement security groups functionality for elb tabpanes

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -119,7 +119,7 @@
             <td>
               <bootstrap-tooltip :title="sec_group">
                 <template slot="content">
-                  Security Groups
+                  <%=t('security_groups.title')%>
                 </template>
               </bootstrap-tooltip>
             </td>
