--- a/app/views/vue/_elb_tabpane.html.erb
+++ b/app/views/vue/_elb_tabpane.html.erb
@@ -58,6 +58,28 @@
   </table>
   <button class="btn btn-default" data-toggle="modal" role="button" href="#upload-server-certificate-modal"><%=t('ec2_instances.btn.upload_certificate')%></button>
 
+  <h4 class="page-header"><%=t('security_groups.title')%></h4>
+  <table class="table table-condensed">
+    <thead>
+    <tr>
+      <th width="200"><%= t'security_groups.group_id' %></th>
+      <th><%= t 'security_groups.group_name' %></th>
+      <th><%= t 'security_groups.description' %></th>
+      <th>Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr v-for="ss in security_groups" v-show="ss.checked">
+      <td>{{ss.group_id}}</td>
+      <td><div class="truncate"> {{ss.group_name}}</div></td>
+      <td><div class="truncate">{{ss.description}}</div></td>
+      <td v-if="ss.tags[0].key === 'Name'">{{ss.tags[0].value}}</td>
+      <td v-else></td>
+    </tr>
+    </tbody>
+  </table>
+  <button class="btn btn-default" data-toggle="modal" @click="change_set()" role="button" href="#change-rules-modal"><%= t 'security_groups.btn.change_groups' %></button>
+
 
   <h4 class="page-header"><%=t('ec2_instances.instances')%></h4>
   <div class="col-md-4 col-sm-6 col-xs-12" v-for="e in ec2_instances">
@@ -101,6 +123,7 @@
     </div>
   </div>
 </div>
+
 
 <%# modal for create listener %>
 <div id="create-listener-modal" class="modal fade" role="dialog" aria-hidden="true">
@@ -254,6 +277,55 @@
           <button @click="upload_server_certificate()" class="btn btn-primary"><%= t('helpers.links.new') %></button>
         </div>
         <div-loader v-else></div-loader>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%# modal for change security groups %>
+<div id="change-rules-modal" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div-loader v-if="loading_groups"></div-loader>
+      <div class="modal-header bg-info">
+        <button class="close" data-dismiss="modal" @click="reload()" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" v-if="lang === 'en'"> <%= t'security_groups.associated' %> {{physical_id}}</h4>
+        <h4 class="modal-title" v-if="lang === 'ja'">{{physical_id}} <%= t'security_groups.associated' %> </h4>
+      </div>
+
+      <div class="modal-body">
+
+        <table class="table table-condensed">
+          <thead>
+          <tr>
+            <th width="20"></th>
+            <th width="100"><%= t'security_groups.group_id' %></th>
+            <th><%= t 'security_groups.group_name' %></th>
+            <th><%= t 'security_groups.description' %></th>
+            <th>Name</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr v-for="r in security_groups" :class="{info: r.checked}" @click="check(r)">
+            <td><input type="checkbox" v-model="r.checked"></td>
+            <td>{{r.group_id}}</td>
+            <td><div class="truncate"> {{r.group_name}}</div></td>
+            <td><div class="truncate">{{r.description}}</div></td>
+            <td v-if="r.tags[0].key === 'Name'">{{r.tags[0].value}}</td>
+            <td v-else></td>
+          </tr>
+          </tbody>
+        </table>
+
+      </div>
+      <div class="modal-footer">
+        <div v-if="!loading_s">
+          <button class="btn btn-default" @click="reload()" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.cancel') %></button>
+          <button class="btn btn-primary" @click="elb_submit_groups()" :disabled="!has_selected" data-dismiss="modal" aria-hidden="true" data-dismiss="{{has_selected ? 'modal' : ''}}">
+            <%= t 'security_groups.btn.assign' %>
+          </button>
+        </div>
+        <div-loader v-if="loading_s"></div-loader>
       </div>
     </div>
   </div>
