--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,25 +5,25 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal"}) do |f| %>
     <%= devise_error_messages! %>
     <% if User.count == 0 %>
-      <p>Create Administrator User</p>
+      <p><%= t 'users.create_admin_user' %></p>
     <% end %>
 
     <div class="form-group">
-      <%= f.label :email, class: 'control-label col-sm-2' %>
+      <%= f.label :email, t('users.email'), class: 'control-label col-sm-2' %>
       <div class="col-sm-5">
         <%= f.email_field :email, {autofocus: true, class: "form-control"} %>
       </div>
     </div>
 
     <div class="form-group">
-      <%= f.label :password, class: 'control-label col-sm-2' %>
+      <%= f.label :password, t('users.password'), class: 'control-label col-sm-2' %>
       <div class="col-sm-5">
         <%= f.password_field :password, {class: "form-control"} %>
       </div>
     </div>
 
     <div class="form-group">
-      <%= f.label :password_confirmation, class: 'control-label col-sm-2' %>
+      <%= f.label :password_confirmation, t('users.password_confirm'), class: 'control-label col-sm-2' %>
       <div class="col-sm-5">
         <%= f.password_field :password_confirmation, {class: "form-control"} %>
       </div>
