--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -58,7 +58,7 @@
 
     <div class="form-actions-top">
       <div class="col-sm-5 col-sm-offset-2">
-        <%= f.submit "Sign up", class: "btn btn-primary" %>
+        <%= f.submit t('helpers.links.create'), class: "btn btn-primary" %>
       </div>
     </div>
   <% end %>
