--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,9 @@
 <% if User.can_sign_up? %>
 
-  <legend>Sign up</legend>
+  <legend class="page-header"><%= t 'users.create_admin_user' %></legend>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal"}) do |f| %>
     <%= devise_error_messages! %>
-    <% if User.count == 0 %>
-      <p><%= t 'users.create_admin_user' %></p>
-    <% end %>
 
     <div class="form-group">
       <%= f.label :email, t('users.email'), class: 'control-label col-sm-2' %>
