[WIP] ProjectParameter#index (Read only)

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,6 +25,7 @@
               <li>
                 <%= link_to t('dishes.dishes'), dishes_path(project_id: project.id) %>
                 <%= link_to t('key_pairs.key_pairs'), key_pairs_path(project_id: project.id) %>
+                <%= link_to t('project_parameters.title'), project_parameters_path(project_id: project.id) %>
               </li>
             </ul>
           </div>
