CSS for Readonly input

--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -252,3 +252,7 @@ textarea:focus:invalid {
 .tb-row:hover .hover-btn {
   display: block;
 }
+
+.form-control[readonly] {
+  background-color: #ddd;
+}
