--- a/app/views/project_parameters/_param_tr.html.erb
+++ b/app/views/project_parameters/_param_tr.html.erb
@@ -1,4 +1,5 @@
-<tr :class="{danger: param.remove}">
+<tr :class="klass">
+  <td></td>
   <td>{{param.key}}</td>
   <td>{{param.value}}</td>
   <td>
