--- a/app/views/project_parameters/index.html.erb
+++ b/app/views/project_parameters/index.html.erb
@@ -9,12 +9,13 @@
 </h2>
 
 <div id="project-parameter-index" v-cloak>
-  <table class="table table-striped">
+  <table class="table">
     <thead>
       <tr>
-        <th>Key</th>
-        <th>Value</th>
-        <th></th>
+        <th class="col-xs-1"></th>
+        <th class="col-xs-3">Key</th>
+        <th class="col-xs-7">Value</th>
+        <th class="col-xs-1"></th>
       </tr>
     </thead>
 
