--- a/app/views/vue/_view_rules_tabpane.html.erb
+++ b/app/views/vue/_view_rules_tabpane.html.erb
@@ -2,6 +2,10 @@
 <h4 v-if="lang === 'en'"> <%= t'security_groups.associated' %> {{physical_id}}</h4>
 <h4 v-if="lang === 'ja'">{{physical_id}} <%= t'security_groups.associated' %> </h4>
 
+<div v-if="!loading" class="form-actions-top">
+  <button @click="print_pdf()" class="btn btn-sm btn-default"><%= fa 'print' %> Print</button>
+</div>
+
   <%= render 'infrastructures/security_groups_table' %>
 
 <div class="col-md-12 col-sm-12">
